- When the text is deleted the format will always reverted to zero; as KTextEdit calls only work on   local/selected text, but they won't set a "default" format.   - To fix this, I adapted the patch by anmma at http://reviewboard.kde.org/r/679/     - On "lineChange", detect if the character entered is the first one       (that means the previous text (if any) was deleted) and set the default char text format       to use the defined font style/size/family and foreground color.   So, the global format/style settings will be always honored

- Do not change the QPalette of the KTextEdit as this is not needed anymore (was it needed before?)

BUG: 176266

svn path=/trunk/KDE/kdeplasma-addons/; revision=1014374